--- a/test/index.html
+++ b/test/index.html
@@ -134,49 +134,49 @@
           <ul class="blockGameList">
             <li class="blockGameList__item">
               <a href="#" class="blockGameList__link">
-                <div class="blockGameList__btn btnGame">Aztec Century</div>
+                <h3 class="blockGameList__btn btnGame">Aztec Century</h3>
                 <div class="blockGameList__img"><img src="./assets/img/games/1.jpg" alt="" /></div>
               </a>
             </li>
             <li class="blockGameList__item">
               <a href="#" class="blockGameList__link">
-                <div class="blockGameList__btn btnGame">Fruit Party Deluxe</div>
+                <h3 class="blockGameList__btn btnGame">Fruit Party Deluxe</h3>
                 <div class="blockGameList__img"><img src="./assets/img/games/2.jpg" alt="" /></div>
               </a>
             </li>
             <li class="blockGameList__item">
               <a href="#" class="blockGameList__link">
-                <div class="blockGameList__btn btnGame">Book Of Winners (loto)</div>
+                <h3 class="blockGameList__btn btnGame">Book Of Winners (loto)</h3>
                 <div class="blockGameList__img"><img src="./assets/img/games/3.jpg" alt="" /></div>
               </a>
             </li>
             <li class="blockGameList__item">
               <a href="#" class="blockGameList__link">
-                <div class="blockGameList__btn btnGame">FORTUNE Wheel</div>
+                <h3 class="blockGameList__btn btnGame">FORTUNE Wheel</h3>
                 <div class="blockGameList__img"><img src="./assets/img/games/4.jpg" alt="" /></div>
               </a>
             </li>
             <li class="blockGameList__item">
               <a href="#" class="blockGameList__link">
-                <div class="blockGameList__btn btnGame">European Roulette NETWORK</div>
+                <h3 class="blockGameList__btn btnGame">European Roulette NETWORK</h3>
                 <div class="blockGameList__img"><img src="./assets/img/games/5.jpg" alt="" /></div>
               </a>
             </li>
             <li class="blockGameList__item">
               <a href="#" class="blockGameList__link">
-                <div class="blockGameList__btn btnGame">Orca</div>
+                <h3 class="blockGameList__btn btnGame">Orca</h3>
                 <div class="blockGameList__img"><img src="./assets/img/games/6.jpg" alt="" /></div>
               </a>
             </li>
             <li class="blockGameList__item">
               <a href="#" class="blockGameList__link">
-                <div class="blockGameList__btn btnGame">7 PLAY POKER N</div>
+                <h3 class="blockGameList__btn btnGame">7 PLAY POKER N</h3>
                 <div class="blockGameList__img"><img src="./assets/img/games/7.jpg" alt="" /></div>
               </a>
             </li>
             <li class="blockGameList__item">
               <a href="#" class="blockGameList__link">
-                <div class="blockGameList__btn btnGame">Multi-hand</div>
+                <h3 class="blockGameList__btn btnGame">Multi-hand</h3>
                 <div class="blockGameList__img"><img src="./assets/img/games/8.jpg" alt="" /></div>
               </a>
             </li>
